codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__duplicate_message_dates_render_the_full_other_remainder.snap
---
source: tui/src/analytics/plot_tests.rs
expression: display(&rendered)
---
                      20
 20               ████████████
                  ████████████
                  ████████████
                  ████████████
                  ████████████
 10               ████████████
                  ████████████
                  ████████████
                  ████████████
                  ████████████
  0 ────────────────────────────────────────
                       ▲
                    Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
6: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 22:1 24:0
1: 0:0 1:2 3:0 18:3 30:0
2: 0:0 18:3 30:0
3: 0:0 18:4 30:0
4: 0:0 18:4 30:0
5: 0:0 18:4 30:0
6: 0:0 1:2 3:0 18:4 30:0
7: 0:0 18:4 30:0
8: 0:0 18:4 30:0
9: 0:0 18:4 30:0
10: 0:0 18:4 30:0
11: 0:0 2:2 3:0 4:2
12: 0:0 23:5 24:0
13: 0:0 20:6 26:0
