codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__missing_zero_and_narrow_charts_keep_the_selection_visible.snap
---
source: tui/src/analytics/plot_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width=36, cursor=0

 6                         ▄▄▄▄▄▄▄
                           ███████
        —          0       ███████
 0 ─────────────────────────────────
        ▲
     Jan 13     Jan 14     Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().fg(Color::Rgb(165, 165, 165)).bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
4: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 1:1 2:0 27:2 34:0
2: 0:0 27:2 34:0
3: 0:0 8:3 9:0 19:4 20:0 27:2 34:0
4: 0:0 1:1 2:0 3:4
5: 0:0 8:3 9:0
6: 0:0 5:5 11:0 16:1 22:0 27:1 33:0

width=36, cursor=1

 6                         ▄▄▄▄▄▄▄
                           ███████
        —          0       ███████
 0 ─────────────────────────────────
                   ▲
     Jan 13     Jan 14     Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().fg(Color::Rgb(165, 165, 165)).bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 1:1 2:0 27:2 34:0
2: 0:0 27:2 34:0
3: 0:0 8:3 9:0 19:4 20:0 27:2 34:0
4: 0:0 1:1 2:0 3:3
5: 0:0 19:4 20:0
6: 0:0 5:1 11:0 16:5 22:0 27:1 33:0

width=8, cursor=2
      5
     ▄▄
     ██
—  0 ██
────────
      ▲
13   15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().fg(Color::Rgb(165, 165, 165)).bg(Color::Reset).underline_color(Color::Reset)
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 6:1 7:0
1: 0:0 5:2 7:0
2: 0:0 5:2 7:0
3: 0:3 1:0 3:3 4:0 5:2 7:0
4: 0:3
5: 0:0 6:1 7:0
6: 0:4 2:0 5:5 7:0

width=1, cursor=2
5
▄
█
█
─
▲


Palette:
0: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
Rows (column:palette):
0: 0:0
1: 0:1
2: 0:1
3: 0:1
4: 0:2
5: 0:0
6: 0:3
