codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__narrow_equal_height_totals_remain_separate_numbers.snap
---
source: tui/src/analytics/plot_tests.rs
expression: "screens.join(\"\\n\\n\")"
---
   111      111   111
111 ┊    111 ┊ 111 ┊
▇▇ ▇▇ ▇▇ ▇▇ ▇▇ ▇▇ ▇▇
██ ██ ██ ██ ██ ██ ██
██ ██ ██ ██ ██ ██ ██
─────────────────────
          ▲
 1  2  3  4  5  6  7


111 111 111 111 111 111 111
 ▇▇  ▇▇  ▇▇  ▇▇  ▇▇  ▇▇  ▇▇
 ██  ██  ██  ██  ██  ██  ██
 ██  ██  ██  ██  ██  ██  ██
────────────────────────────
             ▲
 1   2   3   4   5   6   7


 150 111 111 111  111 111 111  111
      ▇▇  ▇▇  ▇▇  ▇▇▇  ▇▇  ▇▇  ▇▇▇
  75  ██  ██  ██  ███  ██  ██  ███
      ██  ██  ██  ███  ██  ██  ███
   0 ──────────────────────────────
                   ▲
      1   2   3    4   5   6    7
