codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__oversized_axes_are_hidden_instead_of_truncated.snap
---
source: tui/src/analytics/plot_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
width=8

 █████
 █████
 █████
 █████
────────
   ▲
Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 1:1 6:0
2: 0:0 1:1 6:0
3: 0:0 1:1 6:0
4: 0:0 1:1 6:0
5: 0:2
6: 0:0 3:3 4:0
7: 0:4 6:0

width=30
         100,000,000
         ████████████
         ████████████
         ████████████
         ████████████
──────────────────────────────
              ▲
           Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 9:1 20:0
1: 0:0 9:2 21:0
2: 0:0 9:2 21:0
3: 0:0 9:2 21:0
4: 0:0 9:2 21:0
5: 0:3
6: 0:0 14:1 15:0
7: 0:0 11:4 17:0

width=35
            100,000,000
           ████████████
           ████████████
           ████████████
           ████████████
───────────────────────────────────
                 ▲
              Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 12:1 23:0
1: 0:0 11:2 23:0
2: 0:0 11:2 23:0
3: 0:0 11:2 23:0
4: 0:0 11:2 23:0
5: 0:3
6: 0:0 17:1 18:0
7: 0:0 14:4 20:0

width=44
                       100,000,000
 100,000,000          ████████████
                      ████████████
  50,000,000          ████████████
                      ████████████
           0 ───────────────────────────────
                            ▲
                         Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 23:1 34:0
1: 0:0 1:2 12:0 22:3 34:0
2: 0:0 22:3 34:0
3: 0:0 2:2 12:0 22:3 34:0
4: 0:0 22:3 34:0
5: 0:0 11:2 12:0 13:2
6: 0:0 28:1 29:0
7: 0:0 25:4 31:0
