codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__partial_cells_use_the_midpoint_and_descend_from_the_baseline.snap
---
source: tui/src/analytics/plot_tests.rs
expression: "snapshots.join(\"\\n\\n\")"
---
sign=1
1.75
 ▇▇▇▇   —
────────────
        ▲
 14    15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
1: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset)
3: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0 4:1
1: 0:1 1:2 5:1 8:3 9:1
2: 0:0
3: 0:1 8:4 9:1
4: 0:1 1:0 3:1 7:5 9:1

sign=-1

        —
────────────
 ▁▁▁▁
-1.75
        ▲
 14    15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset).reversed()
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 8:1 9:0
2: 0:2
3: 0:0 1:3 5:0
4: 0:2 5:0
5: 0:0 8:4 9:0
6: 0:0 1:2 3:0 7:5 9:0
