codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__selected_callout_keeps_the_authoritative_daily_total.snap
---
source: tui/src/analytics/plot_tests.rs
expression: display(&rendered)
---

 20                  20.00
                  ▃▃▃▃▃▃▃▃▃▃▃▃
 10               ████████████
                  ████████████
  0 ────────────────────────────────────────
                       ▲
                    Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
2: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
3: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
5: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold()
6: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 1:1 3:0 21:2 26:0
2: 0:0 18:3 30:0
3: 0:0 1:1 3:0 18:4 30:0
4: 0:0 18:4 30:0
5: 0:0 2:1 3:0 4:1
6: 0:0 23:5 24:0
7: 0:0 20:6 26:0
