codex-rs/tui/src/analytics/snapshots/codex_tui__analytics__plot__tests__signed_chart_dark.snap
---
source: tui/src/analytics/plot_tests.rs
expression: display(&rendered)
---

   15    8.00
        ▅▅▅▅▅▅▅▅
  7.5   ████████                   0.00
        ████████    ▂▂▂▂▂▂▂▂     ▆▆▆▆▆▆▆▆
    0 ──────────────────────────────────────
        ▄▄▄▄▄▄▄▄    ████████     ▂▂▂▂▂▂▂▂

                      -3.00
  -15

                        ▲
        Jan 13       Jan 14       Jan 15

Palette:
0: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset)
1: Style::new().fg(Color::Rgb(165, 165, 165)).bg(Color::Reset).underline_color(Color::Reset)
2: Style::new().fg(Color::Reset).bg(Color::Reset).underline_color(Color::Reset).dim()
3: Style::new().cyan().bg(Color::Reset).underline_color(Color::Reset)
4: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset).reversed()
5: Style::new().magenta().bg(Color::Reset).underline_color(Color::Reset)
6: Style::new().white().bg(Color::Reset).underline_color(Color::Reset).bold()
7: Style::new().fg(Color::Rgb(99, 168, 248)).bg(Color::Reset).underline_color(Color::Reset).bold()
8: Style::new().fg(Color::Rgb(99, 168, 248)).bg(Color::Reset).underline_color(Color::Reset).bold().underlined()
Rows (column:palette):
0: 0:0
1: 0:0 3:1 5:0 9:2 13:0
2: 0:0 8:3 16:0
3: 0:0 2:1 5:0 8:3 16:0 35:2 39:0
4: 0:0 8:3 16:0 20:3 28:0 33:3 41:0
5: 0:0 4:1 5:0 6:2
6: 0:0 8:4 16:0 20:5 28:0 33:4 41:0
7: 0:0
8: 0:0 22:6 27:0
9: 0:0 2:1 5:0
10: 0:0
11: 0:0 24:7 25:0
12: 0:0 8:1 14:0 21:8 27:0 34:1 40:0
